# new-slicer

./: AGENT.md  CLAUDE.md
.github/workflows/: ci.yml  trigger-doxygen-build-and-publish.yml
Applications/SlicerApp/: CLAUDE.md
Base/: AGENT.md  CLAUDE.md
Base/QTApp/: qSlicerMainWindow.cxx
Base/QTApp/Resources/UI/: qSlicerMainWindow.ui
Libs/MRML/: AGENT.md  CLAUDE.md
Modules/CLI/: CMakeLists.txt
Modules/Loadable/: AGENT.md  CLAUDE.md  CMakeLists.txt
Modules/Scripted/: AGENT.md  CLAUDE.md  CMakeLists.txt
